# godwoken_explorer

./: .dockerignore  .formatter.exs  .gitignore  .iex.exs  Capfile  Dockerfile  Gemfile  Makefile  README.md  coveralls.json  mix.exs  package-lock.json  package.json  prod_testnet_v1_1.env
.github/ISSUE_TEMPLATE/: register-a-general-contract.md  register-a-general-contract.yml  register-a-new-bridged-token.md  register-a-new-bridged-token.yml  register-a-new-native-erc20-token.md  register-a-new-native-erc20-token.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  clean_cache.yml  codeql-analysis.yml  deploy.yml  prod_mainnet v1.yml  prod_mainnet.yml  prod_testnet.yml  prod_testnet_v1_1.yml  staging_testnet.yml  staging_testnet_v1.yml  staging_testnet_v1_1.yml  test.yml
assets/: package-lock.json  package.json  webpack.config.js
assets/js/: page.js  socket.js
config/: config.exs  deploy.rb  dev.exs  dev.per.exs  prod.exs  prod.secret.exs  runtime.exs  staging.exs  stg.exs  test.exs
config/chains/: mainnet.exs  mainnet_v1.exs  testnet.exs  testnet_v1.exs  testnet_v1_1.exs
docker/: Dockerfile
docker_compose/: godwoken_explorer_compose.yml  gwscan_compose.yml
docs/: ER.erd  api.md  deploy_to_ubuntu.md  docker-compose.md  docker_enviromnent.md  get_started.md  godwoken_configuration.md  schema.graphql
lib/: godwoken_explorer.ex  godwoken_explorer_web.ex  release_tasks.ex
native/molecule_parser/: Cargo.toml
native/molecule_parser/src/: lib.rs  molecule_type.rs
rel/: config.exs
test/: test_helper.exs
(+655 files in other folders)
