[package]
name = "molecule_parser"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "molecule_parser"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.21.1"
molecule = { version = "0.6", default-features = false }
hex= "0.4.2"
ckb-hash = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.40.0" }